# tabular_dfp_test

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-temp  PRODUCTION_ARCHITECTURE.md  README.md  bootstrap_project.sh  docker-compose.yml  instructions.md  main.py  pyproject.toml  requirements-lock.txt  setup_host.sh  setup_vm.bash
workspace/data/archive/: healthcare_cybersecurity_10k.csv
workspace/src/: eda.ipynb  model.py  utils.py
workspace/src/ref/: dfp_autoencoder_pipeline.py
workspace/src/ref/dfp_pipeline/: __init__.py  config.yaml  requirements.txt  train.py
workspace/src/ref/dfp_pipeline/data/: __init__.py  dataloader.py  dataset.py
workspace/src/ref/dfp_pipeline/inference/: infer.py
workspace/src/ref/dfp_pipeline/model/: __init__.py  autoencoder.py
workspace/src/ref/dfp_pipeline/training/: __init__.py  checkpoint.py  trainer.py
workspace/src/ref/dfp_pipeline/utils/: config.py  seed.py
