[project]
name = "tabular-dfp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "tensorboard>=2.20.0",
]
